# Sistemas-Distribuidos-Shopping-Lists

./: .gitignore  CMakeLists.txt  README.md  hello_world.cpp  readme.md
Sistemas-Distribuidos-java/ShoppingLists/: .gitignore
Sistemas-Distribuidos-java/ShoppingLists/lists/: lista.txt  user_1_1699494713508597.txt  user_1_1699495640933445193827.txt  user_1_636489007614245097.txt
Sistemas-Distribuidos-java/ShoppingLists/src/: Client.java  Item.java  Main.java  ShoppingList.java  ShoppingListManager.java
docs/: Sistemas Distribuidos Larga Escala.pptx
java-maven-project/: pom.xml
java-maven-project/lists/: user_1_4236750021688021799.txt
java-maven-project/src/main/java/org/example/: Client.java  Main.java  MiddleManServer.java  ShoppingList.java  ShoppingListManager.java
src/: MiddleManServer.cpp  MiddleManServer.h  client.cpp  client.h  db.cpp  db.h  main.cpp  server.cpp  server.h  shoppinglist.cpp  shoppinglist.h
src/main/java/org/example/: Item.java  MiddleManServer.java  RunClient.java  RunDBServer.java  RunDBShard.java  RunMiddleManServer.java  RunRouterServer.java
src/main/java/org/example/Client/: User.java
src/main/java/org/example/Client/UserData/: 0594fe65-692c-4684-8bb2-53c47323a2f7.json  1e12d248-7b70-44cb-aad3-cb50e234d837.json  john.json  (+21 more)
src/main/java/org/example/DBServer/: DBShard.java  HashFunction.java  HashRing.java  SimpleHashFunction.java
src/main/java/org/example/Messaging/: Packet.java  States.java
src/main/java/org/example/ShoppingList/: CRDTItem.java  Item.java  ShoppingList.java  ShoppingListManager.java  States.java
(+5 files in other folders)
